--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ title = "Redwall Analytics"
 theme = "hugo-lithium-theme"
 googleAnalytics = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+disqusShortname = "www-redwallanalytics-com"
 
 [permalinks]
     post = "/:year/:month/:day/:slug"
