--- a/netlify.toml
+++ b/netlify.toml
@@ -6,9 +6,9 @@ HUGO_VERSION = "0.81.0"
 
 [context]
 [context.branch-deploy]
-command = "hugo -F -b $DEPLOY_PRIME_URL"
+command = "hugo -b $DEPLOY_PRIME_URL --buildFuture --buildDrafts"
 [context.deploy-preview]
-command = "hugo -F -b $DEPLOY_PRIME_URL"
+command = "hugo -b $DEPLOY_PRIME_URL --buildFuture --buildDrafts"
 [context.production]
 [context.production.environment]
 HUGO_ENV = "production"
